# eupholio

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  docker-compose.yml  go.mod  go.sum  init.sh  mysql.conf  run.sh  sqlboiler.toml
eupholio-core/: Cargo.toml  README.md
eupholio-core/doc/: 01-overview.md  02-domain-model.md  03-calculation-methods.md  04-cli.md  05-parity-testing.md  06-roadmap.md  07-rounding-policy.md  08-normalizer-interface.md  09-validation-codes.md  10-pr-prep-core-rs.md  11-pr-ready-summary-core-rs.md  12-dev-workflows.md  13-per-year-semantics.md  14-normalizer-phase1.md  README.md
eupholio-core/src/: config.rs  event.rs  lib.rs  report.rs
eupholio-core/src/engine/: mod.rs  moving_average.rs  (+1 more)
eupholio-core/tests/: cli_e2e.rs  golden.rs  normalizer_bittrex_smoke.rs  per_event_rounding_regression.rs  per_year_carry_consistency.rs
eupholio-normalizer/: Cargo.toml
eupholio-normalizer/doc/: 15-normalizer-bittrex-order-history-mapping.md  16-fixture-policy.md  17-next-adapter-survey.md  18-go-rust-migration-plan.md  19-normalizer-coincheck-trade-history-mapping.md  20-normalizer-coincheck-phase3-scope.md  21-normalizer-coincheck-phase4-scope.md  22-normalizer-bitflyer-phase1-trade-mapping.md  23-bitflyer-api-poc-spec.md  23-cryptact-action-support-matrix.md  24-api-crate-split-architecture.md  25-ai-normalizer-adapter-playbook.md  25-cryptact-action-support-matrix.md  README.md
eupholio-normalizer/src/: bitflyer.rs  bitflyer_api.rs  bittrex.rs  coincheck.rs  cryptact.rs  lib.rs  poloniex.rs
eupholio-normalizer/tests/: bitflyer_api_poc.rs  cryptact_poc.rs  normalizer_bitflyer_smoke.rs  normalizer_bittrex_smoke.rs  normalizer_coincheck_smoke.rs  normalizer_poloniex_smoke.rs
(+164 files in other folders)
