[package]
name = "eupholio-normalizer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
eupholio-core = { path = "../eupholio-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

[dev-dependencies]
rust_decimal_macros = "1"
