[package]
name = "eupholio-normalizer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
eupholio-core = { path = "../eupholio-core" }
csv = "1"
regex = "1"

[dev-dependencies]
serde_json = "1"
